# EdgyGL

./: .gitignore  README.md  import-summary.txt  readme.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/edgygl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/CL/: opencl.h
app/src/main/assets/shaders/: fragment_shader_2d.glsl  fragment_shader_oes.glsl  vertex_shader.glsl
app/src/main/java/com/example/edgygl/activities/: MainActivity.kt
app/src/main/java/com/example/edgygl/fragments/: CameraPermissionsRationaleFragment.kt
app/src/main/java/com/example/edgygl/opengl/: CameraRenderer.kt  EdgyGLSurfaceView.kt  GLRendererBase.kt  GlUtil.kt
app/src/main/jni/: CMakeLists.txt  processImage.cpp  processImage.h
app/src/main/res/drawable/: ic_chevron_left_24dp.xml  ic_photo_camera.xml  thumb.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera_permissions_rationale.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/edgygl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
